# rust-graphql-server-sample

./: Cargo.toml
server/: Cargo.toml
server/src/: graphql.rs  main.rs
